# Send-Pi-Cam

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HSV.txt  Makefile  Metrics.cpp  Metrics.hpp  Metrics.txt  OpenFilter.cpp  OpenFilter.hpp  OpenVideo.cpp  OpenVideo.hpp  cameraClient.cpp  cameraServer.cpp  cmake_install.cmake  install.sh  opencv_cam_client  opencv_cam_server
